archive/tekup-org-archived-2025-10-22/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tekup-production
  labels:
    name: tekup-production
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: tekup-staging  
  labels:
    name: tekup-staging
    environment: staging
